Fixed additional socket calls

--- a/src/ocf/Makefile
+++ b/src/ocf/Makefile
@@ -118,24 +118,24 @@ am__can_run_installinfo = \
     *) (install-info --version) >/dev/null 2>&1;; \
   esac
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/matt/Desktop/ceph-0.61.3-rsockets/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /root/ceph-rsockets/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
-AM_CXXFLAGS =  -I/usr/include/nss -I/usr/include/nspr   
+AM_CXXFLAGS =  
 AM_DEFAULT_VERBOSITY = 0
 AR = ar
-AUTOCONF = ${SHELL} /home/matt/Desktop/ceph-0.61.3-rsockets/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/matt/Desktop/ceph-0.61.3-rsockets/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/matt/Desktop/ceph-0.61.3-rsockets/missing --run automake-1.11
-AWK = gawk
+AUTOCONF = ${SHELL} /root/ceph-rsockets/missing --run autoconf
+AUTOHEADER = ${SHELL} /root/ceph-rsockets/missing --run autoheader
+AUTOMAKE = ${SHELL} /root/ceph-rsockets/missing --run automake-1.11
+AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
 CPP = gcc -E
 CPPFLAGS = 
-CRYPTOPP_CFLAGS = 
-CRYPTOPP_LIBS = no
-CRYPTO_CFLAGS = -I/usr/include/nss -I/usr/include/nspr  
-CRYPTO_LIBS = -lnss3 -lnssutil3 -lsmime3 -lssl3 -lplds4 -lplc4 -lnspr4  
+CRYPTOPP_CFLAGS =  
+CRYPTOPP_LIBS = -lcrypto++  
+CRYPTO_CFLAGS =  
+CRYPTO_LIBS = -lcrypto++  
 CXX = g++
 CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
@@ -153,8 +153,8 @@ EGREP = /bin/grep -E
 EXEEXT = 
 EXTRA_CLASSPATH_JAR = 
 FGREP = /bin/grep -F
-GCOV_PREFIX_STRIP = 5
-GIT_CHECK = 
+GCOV_PREFIX_STRIP = 3
+GIT_CHECK = yes
 GREP = /bin/grep
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
@@ -172,19 +172,19 @@ LIBEDIT_CFLAGS =
 LIBEDIT_LIBS = -ledit  
 LIBFUSE = -lfuse
 LIBOBJS = 
-LIBS = -lboost_thread-mt -lboost_system-mt -lleveldb -lsnappy 
+LIBS = -lboost_thread-mt -lboost_system-mt -lleveldb -lsnappy -lrdmacm
 LIBTCMALLOC = -ltcmalloc
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIPO = 
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/matt/Desktop/ceph-0.61.3-rsockets/missing --run makeinfo
+MAKEINFO = ${SHELL} /root/ceph-rsockets/missing --run makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
 NM = /usr/bin/nm -B
 NMEDIT = 
-NSS_CFLAGS = -I/usr/include/nss -I/usr/include/nspr  
-NSS_LIBS = -lnss3 -lnssutil3 -lsmime3 -lssl3 -lplds4 -lplc4 -lnspr4  
+NSS_CFLAGS = 
+NSS_LIBS = 
 OBJDUMP = objdump
 OBJEXT = o
 OTOOL = 
@@ -217,10 +217,10 @@ STRIP = strip
 VERSION = 0.61.3
 WARN_IGNORED_QUALIFIERS = -Wignored-qualifiers
 WARN_TYPE_LIMITS = -Wtype-limits
-abs_builddir = /home/matt/Desktop/ceph-0.61.3-rsockets/src/ocf
-abs_srcdir = /home/matt/Desktop/ceph-0.61.3-rsockets/src/ocf
-abs_top_builddir = /home/matt/Desktop/ceph-0.61.3-rsockets
-abs_top_srcdir = /home/matt/Desktop/ceph-0.61.3-rsockets
+abs_builddir = /root/ceph-rsockets/src/ocf
+abs_srcdir = /root/ceph-rsockets/src/ocf
+abs_top_builddir = /root/ceph-rsockets
+abs_top_srcdir = /root/ceph-rsockets
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -251,7 +251,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/matt/Desktop/ceph-0.61.3-rsockets/install-sh
+install_sh = ${SHELL} /root/ceph-rsockets/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
